--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -17,8 +17,9 @@
 		    <a class="mui-icon iconfont icon-bianji mui-pull-right"></a>
 		</header>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			events.initSubPage('qiuzhi-questionSub.html')
 		</script>
 	</body>
 
