--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -20,14 +20,15 @@
 
 				</ul>
 			</div>
+			<div id="footer" class="reply-container">
+				<input type="text" placeholder="输入内容" class="input-text" />
+				<input type="button" id='btn-reply' class="btn-commit" value="回答"></input>
+			</div>
 		</div>
-		<footer id="footer" class="">
-			<input id='msg-content' type="text" class='input-text'></input>
-			<button id='btn-reply' class="mui-btn mui-btn-green btn-commit">提交</button>
-		</footer>
+
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/qiuzhi/qiuzhi-questionSub.js"></script>
+		<!--<script src="../../js/qiuzhi/qiuzhi-questionSub.js"></script>-->
 	</body>
 
 </html>
