--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -9,20 +9,25 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/qiuzhi/qiuzhi-questionSub.css" rel="stylesheet" />
+		<link href="../../css/quan/class_space.css" rel="stylesheet" />
+
 	</head>
 
 	<body>
-		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<!--数据列表-->
-				<ul class="mui-table-view">
-
-				</ul>
-			</div>
-			<div id="footer" class="reply-container">
-				<input type="text" placeholder="输入内容" class="input-text" />
-				<input type="button" id='btn-reply' class="btn-commit" value="回答"></input>
+		<div class="mui-content" >
+			<textarea placeholder="写下你的问题" style="height: 40px;"></textarea>
+			<p style="margin-left: 10px;margin-top: -5px;font-size: 14px;">请添加问题的补充说明</p>
+			<div class="input-content" style="margin-top: 30px;">
+				<textarea id="input-content" placeholder="请输入内容"></textarea>
+				<div id="take_pic" class="take_pic">
+					<a class="mui-icon iconfont icon-xiangji"></a>
+				</div>
+				<div id="take_camero" class="take_camero">
+					<a class="mui-icon iconfont icon-shipin"></a>
+				</div>
+				<div id="get_gallery" class="get_gallery">
+					<a class="mui-icon iconfont icon-xiangce"></a>
+				</div>
 			</div>
 		</div>
 
