首页完整版

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -28,7 +28,7 @@
 
 		<nav class="mui-bar mui-bar-tab ">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="../cloud/cloud_home.html">
-				<span class="mui-icon iconfont icon-yunpan1"></span>
+				<span class="mui-icon iconfont icon-shouye2"></span>
 				<span class="mui-tab-label">首页</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="../scienceeducation/scienceeducation_home.html">
@@ -40,7 +40,7 @@
 				<span class="mui-tab-label">展现</span>
 			</a>
 			<a class="mui-tab-item" href="../qiuzhi/qiuzhi_home.html">
-				<span class="mui-icon iconfont icon-wenda"></span>
+				<span class="mui-icon iconfont icon-wenda1"></span>
 				<span class="mui-tab-label">求知</span>
 			</a>
 		</nav>
