调整index的顶部导航切换页面时改变图标和监听

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -18,6 +18,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav common-background-bar">
+			<div id="title_left"></div>
 			<h1 id="title" class="mui-title"></h1>
 			<div id="random_icon">
 				<a id="pubDynamic" class="mui-pull-right mui-plus-visible" style="padding-left: 20px;padding-top: 10px;font-size: 16px;">晒一晒</a>
