科技界面数据修改

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -59,7 +59,7 @@
 			//			requestAllCity();
 			//			requestCitySetting();
 			//			requestUserCity();
-			requestCityNews();
+//			requestCityNews();
 		});
 
 		//41.获取某个区域下的所有子区域或查询城市
@@ -146,6 +146,27 @@
 		}
 
 		
+
+		//1.获取所有话题
+		//		function requestCitySetting() {
+		//			//所需参数
+		//			var comData = {
+		//				vvl: '370100_济南市|370900_泰安市', //定制城市组合，城市代码_城市名称|城市代码_城市名称|.....
+		//				vvl1: '0' //定制城市频道,0科教频道,1展示频道,其他待定
+		//			};
+		//			// 等待的对话框
+		//			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+		//			//1.获取所有话题
+		//			postDataPro_PostUTcityA(comData, wd, function(data) {
+		//				wd.close();
+		//				console.log('获取所有话题:' + JSON.stringify(data));
+		//				if(data.RspCode == 0) {
+		//
+		//				} else {
+		//					mui.toast(data.RspTxt);
+		//				}
+		//			});
+		//		}
 	</script>
 
 </html>
