--- a/JiaoBaoYun-hb/html/scienceeducation/scienceeducation_home.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/scienceeducation_home.html
@@ -18,13 +18,14 @@
 			科教
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
 			//自己定制的城市数组
 			var eduArray = [];
 			//当前显示的第几个城市
 			var eduIndex = 0;
-			
 
 			mui.plusReady(function() {
 				window.addEventListener('tapTitleLeft', function() {
@@ -57,7 +58,9 @@
 							var model_area = {
 								acode: '', //节点代码,通用6位,前两位为省份编码,中间两位为城市编码,后两位为区县编码
 								aname: '', //节点名称
-								atype: '' //节点类型,0省1城市2区县
+								atype: '', //节点类型,0省1城市2区县
+								dataArray: '', //对应城市的新闻数组
+								index: 0 //获取第几页的新闻数据
 							};
 							console.log('tempStr:' + tempStr);
 							//将分成的每个值，再通过‘_’拆分为model
@@ -67,6 +70,10 @@
 							model_area.atype = '1';
 							//将对应的这个数组的str和model对换，将数组中的值，替换为model数组
 							eduArray.splice(m, 1, model_area);
+							//如果有值，默认获取第一个城市的数据
+							if(m == 0) {
+								requestCityNews(tempArea[0]);
+							}
 						}
 						console.log('修改后的最终值为:' + JSON.stringify(eduArray));
 					} else {
@@ -76,11 +83,11 @@
 			}
 
 			//45.通过区域代码获取对应区域的分页新闻
-			function requestCityNews() {
+			function requestCityNews(cityCode) {
 				//所需参数
 				var comData = {
 					top: '10', //每页行数，
-					vvl: '370100', //查询的区域代码,省份截取城市代码前两位,城市截取城市代码的前4位
+					vvl: cityCode, //查询的区域代码,省份截取城市代码前两位,城市截取城市代码的前4位
 					vvl1: '1' //页码,获取第几页
 				};
 				// 等待的对话框
@@ -90,7 +97,13 @@
 					wd.close();
 					console.log('对应区域的分页新闻:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
-						
+						var tempArr = data.RspData.dt;
+						//将返回的新闻遍历
+						for(var m in tempArr) {
+							var tempModel = tempArr[m];
+							tempModel.timgs = tempModel.timgs.split('|');
+						}
+						console.log('新闻最终值为:' + JSON.stringify(tempArr));
 					} else {
 						mui.toast(data.RspTxt);
 					}
