城市选择 侧滑

--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -205,7 +205,7 @@
 			});
 
 			mui.plusReady(function() {
-				console.log('云存储');
+//				console.log('云存储');
 				//---初始化---start---
 				var topFolderData = []; //记录顶层的所有的文件和文件夹
 				var showPid = ''; //当前展示的界面的父id
