--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -99,7 +99,7 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
-				console.log('选择文件的方式');
+//				console.log('选择文件的方式');
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				var subData = null; //记录从父页面获取的数据
 				var upFile = null; //记录上传的文件
