--- a/JiaoBaoYun-hb/html/show/show_home.html
+++ b/JiaoBaoYun-hb/html/show/show_home.html
@@ -11,16 +11,18 @@
 		<title>展现</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/utils/slide_navigatian.css" rel="stylesheet" />
+		<link href="../../css/show/show.css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<div class="mui-content">
-		    展现
 		</div>
 		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript">
-			mui.init()
-		</script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/libs/jquery.js"></script>
+		<script src="../../js/utils/slide-selector.js"></script>
+		<script src="../../js/show/show.js"></script>
 	</body>
 
 </html>
