--- a/JiaoBaoYun-hb/html/scienceeducation/scienceeducation_home.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/scienceeducation_home.html
@@ -20,6 +20,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="../../js/utils/events.js" ></script>
 		<script type="text/javascript">
 			mui.init();
 			//自己定制的城市数组
@@ -30,6 +31,11 @@
 			mui.plusReady(function() {
 				window.addEventListener('tapTitleLeft', function() {
 					console.log('科教-tapTitleLeft');
+					events.openNewWindowWithData('../utils/customizeCity.html', {
+						id: 'edu',
+						webid: '../scienceeducation/scienceeducation_home.html', //当前webview的id
+						arry: eduArray //已经定制的城市数组
+					});
 				});
 
 				//44.获取个人的订制城市
