--- a/JiaoBaoYun-hb/html/show/show-sub.html
+++ b/JiaoBaoYun-hb/html/show/show-sub.html
@@ -13,14 +13,28 @@
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
 		  <div class="mui-scroll">
 		    <!--数据列表-->
-		    <ul class="mui-table-view">
-		      
-		    </ul>
+		   <ul class="mui-table-view">
+		           <li class="mui-table-view-cell">
+		               <a class="mui-navigate-right">
+		                   Item 1
+		               </a>
+		           </li>
+		           <li class="mui-table-view-cell">
+		               <a class="mui-navigate-right">
+		                    Item 2
+		               </a>
+		           </li>
+		           <li class="mui-table-view-cell">
+		               <a class="mui-navigate-right">
+		                    Item 3
+		               </a>
+		           </li>
+		       </ul>
 		  </div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/utils/sub.js"></script>
-		<!--<script src="../../js/show/show-sub.js"></script>-->
+		<script src="../../js/utils/h5fresh.js"></script>
+		<script src="../../js/show/show-sub.js"></script>
 	</body>
 
 </html>
