--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -8,6 +8,10 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/publicQiuzhiProtocol.js" type="text/javascript" charset="utf-8"></script>
 
 	</head>
 
@@ -16,7 +20,7 @@
 			<div class="mui-scroll">
 				<!--数据列表-->
 				<ul id="ul" class="mui-table-view">
-					<li class="mui-table-view-cell mui-media ">
+					<!--<li class="mui-table-view-cell mui-media ">
 						中小学辅导机构的未来到底名不明朗？
 					</li>
 					<li class="mui-table-view-cell mui-media ">
@@ -29,42 +33,38 @@
 					</li>
 					<li class="mui-table-view-cell mui-media ">
 						中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导 机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明 朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗
-					</li>
+					</li>-->
 				</ul>
 			</div>
 
 		</div>
-
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript">
-			var model = {
-				title: '中小学辅导机构的未来到底名不明朗？',
-				content: '中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导 机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明 朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗中小学辅导机构的未来到底名不明朗'
-
-			}
-			mui.init(function() {
-
-			});
+			var datasource = {};
+			mui.init();
 			mui.plusReady(function() {
 				//8.获取某个回答的详情
 				requestAnswerDetail();
 			})
 
 			function refreshUI() {
-				var ul = document.getElementsByClassName('ul');
+				var ul = document.getElementById('ul');
 				var li_title = document.createElement("li");
-				li.className = 'mui-table-view-cell mui-media';
-				li.innerHTML = model.title;
+				li_title.className = 'mui-table-view-cell mui-media';
+				li_title.innerHTML = datasource.AskTitle;
 				var li_person = document.createElement("li");
-				li.className = 'mui-table-view-cell mui-media';
-				//				li.innerHTML = '<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">'+
-				//						'<div class="mui-media-body">'+
-				//							李欣芸
-				//							<p class='mui-ellipsis'>专栏:教育、美食</p>
-				//							<button class="mui-btn-green mui-pull-right" style="margin-top: -40px;">关注</button>
-				//						</div>'; 
+				li_person.className = 'mui-table-view-cell mui-media';
+				li_person.innerHTML = '<img class="mui-media-object mui-pull-left" src="../../image/tab_zone/u72.png">' +
+					'<div class="mui-media-body">' +
+					datasource.AnswerMan +
+					'<p class="mui-ellipsis">' + '专栏:教育、美食' + '</p>' +
+					'<button class="mui-btn-green mui-pull-right" style="margin-top: -40px;">' + '关注' + '</button>' +
+					'</div>';
+				var li_content = document.createElement("li");
+				li_content.className = 'mui-table-view-cell mui-media';
+				li_content.innerHTML = datasource.AnswerContent;
+				ul.appendChild(li_title);
+				ul.appendChild(li_person);
+				ul.appendChild(li_content);
 
 			}
 
@@ -84,7 +84,8 @@
 					wd.close();
 					console.log('8.获取某个回答的详情:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
-
+						datasource = data.RspData;
+						refreshUI();
 					} else {
 						mui.toast(data.RspTxt);
 					}
