--- a/JiaoBaoYun-hb/html/utils/customizeCity.html
+++ b/JiaoBaoYun-hb/html/utils/customizeCity.html
@@ -127,7 +127,7 @@
 				console.log('订制城市：' + JSON.stringify(main.data));
 				console.log('订制城市arry：' + JSON.stringify(main.data.cities));
 				//main.data = {
-				//	id: 'edu',//edu-科教，show-展现
+				//	id: 'edu',//0科教，1展现
 				//	webid: '../scienceeducation/scienceeducation_home.html', //id对应webview的id
 				//	cities: eduArray //已经定制的城市数组
 				//}
@@ -174,7 +174,16 @@
 
 					commitCities = tempCities; //设置提交的城市
 					console.log('commitCities:' + JSON.stringify(commitCities));
-
+					//将数组改为字符串
+					var tempStr = '';
+					for (var m in commitCities) {
+						var tempModel = commitCities[m];
+						var tempStr1 = tempModel.acode + '_' +tempModel.aname;
+						commitCities.splice(m, 1, tempStr1);
+						tempStr = commitCities.join('|');
+					}
+					//43.用户修改或添加区域阅读设置
+					requestCitySetting(tempStr);
 				});
 
 				//---监听---end---
@@ -252,11 +261,11 @@
 			}
 
 			//43.用户修改或添加区域阅读设置
-			function requestCitySetting() {
+			function requestCitySetting(str) {
 				//所需参数
 				var comData = {
-					vvl: '370100_济南市|370900_泰安市', //定制城市组合，城市代码_城市名称|城市代码_城市名称|.....
-					vvl1: '0' //定制城市频道,0科教频道,1展示频道,其他待定
+					vvl: str, //定制城市组合，城市代码_城市名称|城市代码_城市名称|.....
+					vvl1: main.data.id //定制城市频道,0科教频道,1展示频道,其他待定
 				};
 				// 等待的对话框
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
